--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
                       href="#"
                       data-catalog
                       class="menu-top-header__link menu-top-header__link_arrow hover_underline"
-                      >Каталог товаров</a
-                    >
+                      ><span>Каталог товаров</span>
+                      <img
+                        src="Img/Incons/Arrow-bottom-white.svg"
+                        alt="Arrow-spoller"
+                    /></a>
                   </li>
                   <li class="menu-top-header__item">
                     <a href="#" class="menu-top-header__link hover_underline"
@@ -97,7 +100,7 @@
                     <div class="phones-header__items">
                       <div class="phones-header__item">
                         <a href="tel:88007774967" class="phones-header__phone"
-                          >8-800-777-49-67</a
+                          ><span>8-800-777-49-67</span></a
                         >
                         <button
                           id="buttonMenu"
@@ -166,6 +169,10 @@
           <div class="catalog-header__container">
             <div class="catalog-header__content">
               <nav class="catalog-header__menu menu-catalog">
+                <button type="button" class="menu-catalog__back">Назад</button>
+                <button type="button" class="back-sub-menu-catalog">
+                  Назад
+                </button>
                 <ul class="menu-catalog__list">
                   <li class="menu-catalog__item">
                     <a
@@ -174,6 +181,10 @@
                       class="menu-catalog__link hover_underline"
                     >
                       Каталог ножей
+                      <img
+                        src="Img/Incons/Arrow-bottom-white.svg"
+                        alt="Arrow-bottom-white"
+                      />
                     </a>
                   </li>
                   <li class="menu-catalog__item">
@@ -183,22 +194,35 @@
                       class="menu-catalog__link hover_underline"
                     >
                       Клинковое оружие
+                      <img
+                        src="Img/Incons/Arrow-bottom-white.svg"
+                        alt="Arrow-bottom-white"
+                      />
                     </a>
                   </li>
                   <li class="menu-catalog__item">
                     <a href="#" class="menu-catalog__link hover_underline"
-                      >Сувенирные изделия</a
-                    >
+                      >Сувенирные изделия
+                      <img
+                        src="Img/Incons/Arrow-bottom-white.svg"
+                        alt="Arrow-bottom-white"
+                    /></a>
                   </li>
                   <li class="menu-catalog__item">
                     <a href="#" class="menu-catalog__link hover_underline"
-                      >Фонари ARMYTEK</a
-                    >
+                      >Фонари ARMYTEK
+                      <img
+                        src="Img/Incons/Arrow-bottom-white.svg"
+                        alt="Arrow-bottom-white"
+                    /></a>
                   </li>
                   <li class="menu-catalog__item">
                     <a href="#" class="menu-catalog__link hover_underline"
-                      >Сопуствующие товары</a
-                    >
+                      >Сопуствующие товары
+                      <img
+                        src="Img/Incons/Arrow-bottom-white.svg"
+                        alt="Arrow-bottom-white"
+                    /></a>
                   </li>
                 </ul>
                 <div class="menu-catalog__sub-menu sub-menu-catalog">
@@ -734,7 +758,45 @@
           </div>
         </div>
       </header>
-      <main class="main"></main>
+      <main class="page">
+        <section class="main-block">
+          <div class="main-block__container">
+            <div class="main-block__content">
+              <div class="main-block__body">
+                <div class="main-block__slider">
+                  <div class="main-block__swiper"></div>
+                  <div class="main-block__slide slide-main-block">
+                    <div class="slide-main-block__content">
+                      <h2 class="slide-main-block__title">
+                        Интернет магазин сертифицированных
+                      </h2>
+                      <h5 class="slide-main-block__sub-title">
+                        златоустовских ножей
+                      </h5>
+                      <p class="slide-main-block__text">
+                        Добро пожаловать на официальный сайт «ЗЛАТМАКС»! В нашем
+                        магазине представлен наиболее широкий выбор
+                        Златоустовских ножей от Златоустовских Оружейных Фабрик
+                        и компаний, мы являемся официальными поставщиками.
+                      </p>
+                      <a href="#" class="slide-main-block__button"></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="main-block__media media-main-block">
+                  <div class="media-main-block__image"></div>
+                </div>
+              </div>
+              <div class="main-block__advantages advantages-main">
+                <div class="advantages-main__item">
+                  <div class="advantages-main__icon"></div>
+                  <div class="advantages-main__text"></div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
       <footer class="footer"></footer>
     </div>
     <script src="JS/App.js"></script>
