--- a/card-item.html
+++ b/card-item.html
@@ -100,7 +100,7 @@
         <div class="header__body body-header">
           <div class="body-header__container">
             <div class="body-header__content">
-              <a href="#" class="body-header__logo">
+              <a href="index.html" class="body-header__logo">
                 <img src="Img/Incons/Logo.svg" alt="Logo" />
               </a>
               <div class="body-header__search">
@@ -295,7 +295,7 @@
                       <ul class="sub-menu-catalog__list">
                         <li class="sub-menu-catalog__item">
                           <a
-                            href="#"
+                            href="catalog.html"
                             class="sub-menu-catalog__link hover_underline"
                             >Разделочные ножи</a
                           >
