--- a/catalog.html
+++ b/catalog.html
@@ -97,7 +97,7 @@
         <div class="header__body body-header">
           <div class="body-header__container">
             <div class="body-header__content">
-              <a href="#" class="body-header__logo">
+              <a href="index.html" class="body-header__logo">
                 <img src="Img/Incons/Logo.svg" alt="Logo" />
               </a>
               <div class="body-header__search">
@@ -1639,7 +1639,7 @@
                   <article class="products-card products-card_position">
                     <div class="products-card__sale">-50%</div>
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -1687,7 +1687,7 @@
                   <article class="products-card products-card_position">
                     <div class="products-card__sale">-50%</div>
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -1734,7 +1734,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -1781,7 +1781,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -1829,7 +1829,7 @@
                   <article class="products-card products-card_position">
                     <div class="products-card__sale">-50%</div>
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -1876,7 +1876,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -1923,7 +1923,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -1970,7 +1970,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2017,7 +2017,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2064,7 +2064,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2111,7 +2111,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2158,7 +2158,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2205,7 +2205,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2252,7 +2252,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2299,7 +2299,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2346,7 +2346,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2393,7 +2393,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2440,7 +2440,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2487,7 +2487,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2534,7 +2534,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
@@ -2581,7 +2581,7 @@
                   </article>
                   <article class="products-card">
                     <div class="products-card__image-container-01">
-                      <a href="#" class="products-card__image">
+                      <a href="card-item.html" class="products-card__image">
                         <img src="Img/Product-card/01.jpg" alt="Knife" />
                       </a>
                     </div>
